<?xml version="1.0"?>
<package format="3">
  <name>marsruut</name>
  <version>0.1.0</version>
  <description>Marsruudi labimine odomeetria pohjal</description>
  <maintainer email="student@tktk.ee">student</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
