<?xml version="1.0"?>
<package format="3">
  <name>raja_andur</name>
  <version>0.1.0</version>
  <description>MOBROS moodul 4a: Lidari sektorite analüüs</description>

  <maintainer email="student@tktk.ee">student</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
