<?xml version="1.0"?>
<package format="3">
  <name>raja_andur</name>
  <version>0.1.0</version>
  <description>Raja andurite lugemine lidariga</description>
  <maintainer email="student@tktk.ee">student</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
